[package]
name = "vine-node-subsystem-test-helpers"
description = "Subsystem traits and message definitions"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
parking_lot = "0.12.0"
vine-node-subsystem = { path = "../subsystem" }
vine-node-subsystem-util = { path = "../subsystem-util" }
vine-primitives = { path = "../../primitives" }
sp-core = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer" }
sp-keystore = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer" }
sc-keystore = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer" }
sp-keyring = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer" }
sp-application-crypto = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "mainnet-peer" }

[dev-dependencies]
vine-overseer = { path = "../overseer" }
